--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Audio Illustrator</title>
 </head>
-<body>
+<body style="margin: 0;">
   <div id="root"></div>
   <script src="src/index.js"></script>
 </body>
