--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Audio Illustrator</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <title>React Audio Illustrator</title>
   </head>
   <body style="margin: 0;">
     <div id="root"></div>
