--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body style="margin: 0;">
     <div id="root"></div>
-    <script src="src/index.ts"></script>
+    <script src="src/index.tsx"></script>
   </body>
 </html>
