--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik:400,500,700"
+      rel="stylesheet"
+    />
     <title>React Audio Illustrator</title>
   </head>
-  <body style="margin: 0;">
+  <body>
     <div id="root"></div>
     <script src="src/index.tsx"></script>
   </body>
