--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="theme-color" content="#FF80AB" />
     <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Rubik:400,500,700"
