--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Rubik:400,500,700"
       rel="stylesheet"
     />
-    <title>React Audio Illustrator</title>
+    <title>Audio Illustrator</title>
   </head>
   <body>
     <div id="root"></div>
