--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="theme-color" content="#FF80AB" />
     <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css?family=Rubik:400,500,700"
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Rubik:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <title>Audio Illustrator</title>
