--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="#FF80AB" />
+    <meta name="theme-color" content="#FFFFFF" />
     <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
